GoWeb/k8s-config/k8s-goweb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goweb
spec:
  type: LoadBalancer
  selector:
    app: goweb
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080

# kubectl apply -f k8s-goweb-service.yaml
